--- a/index.html
+++ b/index.html
@@ -266,12 +266,13 @@
             </section>
 
             <section class="cta">
-                <h2>Join the waitlist</h2>
-                <p>v1.0 is ready. App Store review in progress. Join waitlist to get the download link first.</p>
-                <form id="waitlist-form">
+                <h2>Join the GetDigest</h2>
+                <p>v1.0 is ready. App Store review in progress. Join GetDigest to get the download link first.</p>
+                <!-- <form id="waitlist-form">
                     <input type="email" name="email" placeholder="you@email.com" required>
                     <button type="submit">Notify me</button>
-                </form>
+                </form> -->
+                <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script><iframe src="https://subscribe-forms.beehiiv.com/061bde11-492a-4b45-977a-8a454e46f4a5" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: ; height: ; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000; max-width: 100%;"></iframe>
                 <div class="status" id="status">Thanks! We will send the download link soon.</div>
                 <div class="note">No spam. Only a single launch email.</div>
             </section>
