--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
                 </div>
                 <div class="carousel" id="carousel">
                     <div class="shot">
-                        <img src="./assets/home.png" alt="App screen preview 1">
+                        <img src="./assets/home.jpg" alt="App screen preview 1">
                     </div>
                     <div class="shot">
-                        <img src="./assets/article.png" alt="App screen preview 2">
+                        <img src="./assets/article.jpg" alt="App screen preview 2">
                     </div>
                     <div class="shot">
-                        <img src="./assets/chat.png" alt="App screen preview 3">
+                        <img src="./assets/chat.jpg" alt="App screen preview 3">
                     </div>
                 </div>
             </section>
