--- a/index.html
+++ b/index.html
@@ -236,6 +236,15 @@
             }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZW9N1GGH0"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3ZW9N1GGH0');
+    </script>
 </head>
 <body>
     <div class="page">
