--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             padding: 38px 32px;
             border: 1px solid rgba(255, 255, 255, 0.18);
             text-align: center;
+            margin-bottom: 20px;
         }
 
         .cta h2 {
@@ -248,6 +249,17 @@
 </head>
 <body>
     <div class="page">
+        <section class="cta">
+            <h2>Join the waitlist</h2>
+            <p>v1.0 is ready. App Store review in progress. Join waitlist to get the download link first.</p>
+            <!-- <form id="waitlist-form">
+                <input type="email" name="email" placeholder="you@email.com" required>
+                <button type="submit">Notify me</button>
+            </form> -->
+            <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script><iframe src="https://subscribe-forms.beehiiv.com/061bde11-492a-4b45-977a-8a454e46f4a5" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: 500px; height: 180px; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000; max-width: 100%;"></iframe>
+            <div class="status" id="status">Thanks! We will send the download link soon.</div>
+            <div class="note">No spam. Only a single launch email.</div>
+        </section>
         <div class="glow"></div>
         <div class="container">
             <header>
@@ -272,18 +284,6 @@
                         <img src="./assets/chat.jpg" alt="App screen preview 3">
                     </div>
                 </div>
-            </section>
-
-            <section class="cta">
-                <h2>Join the GetDigest</h2>
-                <p>v1.0 is ready. App Store review in progress. Join GetDigest to get the download link first.</p>
-                <!-- <form id="waitlist-form">
-                    <input type="email" name="email" placeholder="you@email.com" required>
-                    <button type="submit">Notify me</button>
-                </form> -->
-                <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script><iframe src="https://subscribe-forms.beehiiv.com/061bde11-492a-4b45-977a-8a454e46f4a5" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: 500px; height: 180px; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000; max-width: 100%;"></iframe>
-                <div class="status" id="status">Thanks! We will send the download link soon.</div>
-                <div class="note">No spam. Only a single launch email.</div>
             </section>
 
             <footer>© 2026 Read Less Studio. Built for GitHub Pages.</footer>
