--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </div>
             </section>
 
-            <footer>© 2026 Read Less Studio. Built for GitHub Pages.</footer>
+            <footer>© 2026 Getdigest</footer>
         </div>
     </div>
 
