--- a/index.html
+++ b/index.html
@@ -198,6 +198,17 @@
             box-shadow: 0 10px 24px rgba(249, 104, 84, 0.4);
         }
 
+        .app-store-btn {
+            display: inline-block;
+            transition: transform 0.2s ease, opacity 0.2s ease;
+            margin-bottom: 16px;
+        }
+
+        .app-store-btn:hover {
+            transform: scale(1.05);
+            opacity: 0.9;
+        }
+
         .note {
             font-size: 0.95rem;
             color: var(--muted);
@@ -250,15 +261,19 @@
 <body>
     <div class="page">
         <section class="cta">
-            <h2>Join the waitlist</h2>
-            <p>v1.0 is ready. App Store review in progress. Join waitlist to get the download link first.</p>
-            <!-- <form id="waitlist-form">
-                <input type="email" name="email" placeholder="you@email.com" required>
-                <button type="submit">Notify me</button>
-            </form> -->
-            <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script><iframe src="https://subscribe-forms.beehiiv.com/061bde11-492a-4b45-977a-8a454e46f4a5" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="width: 500px; height: 180px; margin: 0; border-radius: 0px 0px 0px 0px !important; background-color: transparent; box-shadow: 0 0 #0000; max-width: 100%;"></iframe>
-            <div class="status" id="status">Thanks! We will send the download link soon.</div>
-            <div class="note">No spam. Only a single launch email.</div>
+            <h2>Now Available on App Store</h2>
+            <p>Get Digest is live! Download now and transform your reading experience.</p>
+            <a href="https://apps.apple.com/us/app/get-digest/id6757782954" target="_blank" rel="noopener noreferrer" class="app-store-btn">
+                <svg viewBox="0 0 120 40" width="150" height="50">
+                    <rect width="120" height="40" rx="6" fill="#000"/>
+                    <text x="42" y="12" fill="#fff" font-size="6" font-family="system-ui">Download on the</text>
+                    <text x="42" y="26" fill="#fff" font-size="12" font-weight="600" font-family="system-ui">App Store</text>
+                    <g fill="#fff" transform="translate(10, 8) scale(0.5)">
+                        <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.81-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
+                    </g>
+                </svg>
+            </a>
+            <div class="note">Free to download. Start reading smarter today.</div>
         </section>
         <div class="glow"></div>
         <div class="container">
@@ -291,15 +306,6 @@
     </div>
 
     <script>
-        const form = document.getElementById("waitlist-form");
-        const status = document.getElementById("status");
-
-        form.addEventListener("submit", (event) => {
-            event.preventDefault();
-            status.style.display = "block";
-            form.reset();
-        });
-
         const carousel = document.getElementById("carousel");
         let index = 0;
         setInterval(() => {
