--- a/curateflow.html
+++ b/curateflow.html
@@ -809,9 +809,9 @@
             <div class="testimonial-card">
                 <p class="testimonial-text">“I’ve been using CurateFlow for a few months, and it’s amazing for building social visuals. You can create professional-looking posts even with minimal design skills.”</p>
                 <div class="testimonial-author">
-                    <div class="author-avatar">Z</div>
+                    <div class="author-avatar">A</div>
                     <div class="author-info">
-                        <h4>Ming Zhang</h4>
+                        <h4>Alex Johnson</h4>
                         <p>Content Marketing</p>
                     </div>
                 </div>
@@ -820,9 +820,9 @@
             <div class="testimonial-card">
                 <p class="testimonial-text">“CurateFlow is a must-have for LinkedIn. I use it for all my posts. It gave me design superpowers—people keep asking who my designer is.”</p>
                 <div class="testimonial-author">
-                    <div class="author-avatar">L</div>
+                    <div class="author-avatar">S</div>
                     <div class="author-info">
-                        <h4>Hua Li</h4>
+                        <h4>Sarah Williams</h4>
                         <p>Growth Marketing @ TechCorp</p>
                     </div>
                 </div>
@@ -831,9 +831,9 @@
             <div class="testimonial-card">
                 <p class="testimonial-text">“CurateFlow made my personal branding much easier. I love how it auto-adjusts the layout and polish—my posts look great, and it saves me tons of time.”</p>
                 <div class="testimonial-author">
-                    <div class="author-avatar">W</div>
+                    <div class="author-avatar">E</div>
                     <div class="author-info">
-                        <h4>Fang Wang</h4>
+                        <h4>Emily Davis</h4>
                         <p>Brand Consultant</p>
                     </div>
                 </div>
